--- a/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
+++ b/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
@@ -38,5 +38,16 @@
     <ClInclude Include="MessageGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Tic Tac Toe.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
