--- a/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
+++ b/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="Src\Game\Menus\MenuManager.h">
       <Filter>Header Files\Game\Menus</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Game\Menus\MainMenu.h">
+      <Filter>Header Files\Game\Menus</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Tic Tac Toe.rc">
@@ -86,6 +89,9 @@
       <Filter>Source Files\Client\Messages</Filter>
     </ClCompile>
     <ClCompile Include="Src\Game\Menus\MenuManager.cpp">
+      <Filter>Source Files\Game\Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Game\Menus\MainMenu.cpp">
       <Filter>Source Files\Game\Menus</Filter>
     </ClCompile>
   </ItemGroup>
