--- a/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
+++ b/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Src\Game\Menus\MainMenu.h">
       <Filter>Header Files\Game\Menus</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Game\GameWindow.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Tic Tac Toe.rc">
@@ -93,6 +96,9 @@
     </ClCompile>
     <ClCompile Include="Src\Game\Menus\MainMenu.cpp">
       <Filter>Source Files\Game\Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Game\GameWindow.cpp">
+      <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
