Server Json good

--- a/Serveur/Serveur.vcxproj.filters
+++ b/Serveur/Serveur.vcxproj.filters
@@ -32,7 +32,7 @@
     <ClInclude Include="Window.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="main.h">
+    <ClInclude Include="pch\pch.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
