--- a/Serveur/Serveur.vcxproj
+++ b/Serveur/Serveur.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="pch\pch.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
