--- a/Serveur/Serveur.vcxproj
+++ b/Serveur/Serveur.vcxproj
@@ -128,11 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Data.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Data.h" />
     <ClInclude Include="pch\pch.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="Window.h" />
