--- a/Serveur/Serveur.vcxproj.filters
+++ b/Serveur/Serveur.vcxproj.filters
@@ -54,4 +54,7 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="grid.json" />
+  </ItemGroup>
 </Project>
