--- a/Serveur/Serveur.vcxproj
+++ b/Serveur/Serveur.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="DataBase.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Web.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +142,7 @@
     <ClInclude Include="DataBase.h" />
     <ClInclude Include="pch\pch.h" />
     <ClInclude Include="Server.h" />
+    <ClInclude Include="Web.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
